[gd_scene load_steps=5 format=3 uid="uid://beomfutyod525"]

[ext_resource type="Script" path="res://Scenes/Weapons/Launcher/rocket.gd" id="1_7lubq"]
[ext_resource type="PackedScene" uid="uid://dstmhi1ce104u" path="res://Scenes/Weapons/Launcher/Models/Rocket.blend" id="1_ncye7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_s1esw"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_h1u1f"]
height = 0.02
radius = 3.0

[node name="Rocket" type="RigidBody3D"]
top_level = true
collision_layer = 16
collision_mask = 66
gravity_scale = 0.1
continuous_cd = true
max_contacts_reported = 1
contact_monitor = true
can_sleep = false
linear_damp_mode = 1
linear_damp = 1.0
script = ExtResource("1_7lubq")

[node name="Rocket" parent="." instance=ExtResource("1_ncye7")]

[node name="BodyCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(0.117145, 0, 0, 0, 0.0601817, 0, 0, 0, 0.147126, 0, 0, -0.00648201)
shape = SubResource("CapsuleShape3D_s1esw")

[node name="FuseTimer" type="Timer" parent="."]
wait_time = 0.85
one_shot = true
autostart = true

[node name="NearColliderTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
autostart = true

[node name="NearPlayerCollider" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.11136e-05, 2.98023e-08, 0.0345526)
collision_layer = 0
collision_mask = 64

[node name="CollisionShape3D" type="CollisionShape3D" parent="NearPlayerCollider"]
transform = Transform3D(1, 0, 0, 0, -4.4737e-08, -1, 0, 1.02346, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_h1u1f")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="FuseTimer" to="." method="_on_fuse_timer_timeout"]
[connection signal="timeout" from="NearColliderTimer" to="." method="_on_near_collider_timer_timeout"]
[connection signal="body_entered" from="NearPlayerCollider" to="." method="_on_near_player_collider_body_entered"]
